AAP-25515 Added new content for RH AAP credential type

--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -1,8 +1,7 @@
-[id="eda-set-up-credential"]
+[id="eda-set-up-rhaap-credential-type"]
 
 = Setting up a {PlatformName} credential
 
-{ControllerNameStart} must contain a project based on a repository with certain playbooks designed to work with the {EDAName} rulebooks. 
-{ControllerNameStart} must also have corresponding job templates set up based on the playbooks in that project.
+To run your rulebook activations successfully, you must create credentials with the {PlatformName} credential type. Using this credential type provides more seamless authentication without the requirement to create a token.
 
 include::eda/proc-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
