--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -2,18 +2,18 @@
 
 = Setting up a {PlatformName} credential
 
-To run your rulebook activations successfully, you must create credentials with the {Red Hat Ansible Automation Platform} credential type. Using this credential type provides more seamless authentication without the requirement to create a token.
+You can create a {PlatformName} credential type to run your rulebook activations. 
 
-.Prerequisites
+//.Prerequisites
 
-* You have created a user.
+//* You have created a user.
+//Verify that this credential has prerequisites.
 
 .Procedure
 
 . Log in to the {PlatformName} Dashboard.
 . From the navigation panel, select {MenuADCredentials}.
 . Go to *Create Credentials*.
-//[ddacosta] I don't see Controller Tokens in the test environment, need to verify where this lives and whether it changes in 2.5
 . Insert the following:
 +
 Name:: Insert the name.
@@ -33,5 +33,5 @@ After saving the credential, the credentials Details page is displayed. From the
 +
 [NOTE]
 ====
-After you have selected and saved your credential type, it cannot be changed.
+After you have saved your credential type, it cannot be changed.
 ====
