AAP-25515 Added new content for RH AAP credential type

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -25,7 +25,7 @@ Credential type:: Click the list and select {PlatformName}.
 ====
 When you select the credential type, the *Type Details* is displayed with fields that are applicable for the credential type you chose.   
 ====
-. In the required {PlatformName} field, enter your automation controller URL (for example, link:https://<<your_gateway_host>>/api/controller[https://<<your_gateway_host>>/api/controller]).
+. In the required {PlatformName} field, enter your automation controller URL (for example, link:https://your_gateway_host/api/controller[https://<<your_gateway_host>>/api/controller]).
 //[JMS]Confirm that a valid password is not required. The daily build at https://ci-gw-20240816.gcp.testing.ansible.com/ no longer shows a required password.
 . Click btn:[Create controller token].
 
