--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -1,6 +1,6 @@
 [id="eda-set-up-rhaap-credential-type"]
 
-= Setting up a {PlatformName} credential
+= {PlatformName} credential
 
 To run your rulebook activations successfully, you must create credentials with the {PlatformName} credential type. Using this credential type provides more seamless authentication without the requirement to create a token.
 
