--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -2,7 +2,7 @@
 
 = Setting up a {PlatformName} credential
 
-You can create a {PlatformName} credential typeto run your rulebook activations. 
+You can create a {PlatformName} credential type to run your rulebook activations. 
 
 //.Prerequisites
 
@@ -23,14 +23,14 @@ Credential type:: Click the list and select {PlatformName}.
 +
 [NOTE]
 ====
-When you select the credential type, the *Type Details* is displayed with fields that are applicable for the credential type you chose.   
+When you select the credential type, the *Type Details* section is displayed with fields that are applicable for the credential type you chose.   
 ====
 . In the required {PlatformName} field, enter your automation controller URL.
 //[JMS]Confirm that a valid password is not required. The daily build at https://ci-gw-20240816.gcp.testing.ansible.com/ no longer shows a required password.
 . Click btn:[Create controller token].
 
 After saving the credential, the credentials Details page is displayed. From there or the Credentials list view, you can edit or delete it.
-+
+
 [NOTE]
 ====
 After you have saved your credential type, it cannot be changed.
