AAP-25515 Added new content for RH AAP credential type

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -2,12 +2,13 @@
 
 = Setting up a {PlatformName} credential
 
-You can create a {PlatformName} credential type to run your rulebook activations. 
+You can create a {PlatformName} credential type to run your rulebook activations.  
 
-//.Prerequisites
+.Prerequisites
 
-//* You have created a user.
-//Verify that this credential has prerequisites.
+* You have created a user.
+* You have obtained the URL and the credentials to access {ControllerName}.
+
 
 .Procedure
 
