AAP-25515 Added new content for RH AAP credential type

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -20,7 +20,7 @@ You can create a {PlatformName} credential type to run your rulebook activations
 Name:: Insert the name.
 Description:: This field is optional.
 Organization:: Click the list to select an organization or select *Default*.
-Credential type:: Click the list and select {PlatformName}. 
+Credential type:: Click the list and select *{PlatformName}*. 
 +
 [NOTE]
 ====
