--- a/stories/topics/con-saas-automation.adoc
+++ b/stories/topics/con-saas-automation.adoc
@@ -4,7 +4,7 @@
 The control plane is the command center to run your automation. 
 However, before you can begin automation, you need to configure the control plane to reach the execution nodes.
 The nature of the hosted control plane and remote execution plane requires traffic over networks to be set up securely. 
-{SaaSonAWSShort} implements a service architectured based on industry standard communication protocols and modern encryption algorithms to ensure that traffic between the control plane is secure.
+{SaaSonAWSShort} implements a service architecture based on industry standard communication protocols and modern encryption algorithms to ensure that traffic between the control plane is secure.
 
 There are two ways to configure:
 
