--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -6,4 +6,4 @@ The Red{nbsp}Hat team manages the uptime and lifecycle of {PlatformNameShort} ap
 
 While the control plane is managed by the Red{nbsp}Hat team, the execution plane is distributed to your domains through the automation mesh hop node and execution nodes.
 
-This service utilizes the enhancements and features available in {PlatformNameShort}.
+This service uses the enhancements and features available in {PlatformNameShort}.
