--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -7,8 +7,4 @@ From here you can access the control plane which allows you to run and manage yo
 You can connect execution nodes through an egress model from your environment using mesh ingress.
 Alternatively, mesh ingress sets up hop nodes on the controller and then you can peer execution nodes to them.
 
-.Figure 1. Egress model
-image:Egress.png[Egress model] 
-
-.Figure 1.2 Ingress vs egress
-image:Ingress+egress.png[Ingress vs egress model] 
+This service uses the enhancements and features available in {PlatformNameShort}.
