AAP-25298: Created docs for one-click trials (#1755)
* AAP-25298: Created docs for one-click trials

* Resolved merge conflict

* Resolved merge conflict

* Resolved merge conflict

--- a/lightspeed/modules/con_wca-key-model-id.adoc
+++ b/lightspeed/modules/con_wca-key-model-id.adoc
@@ -3,19 +3,31 @@
 [id="wca-key-model-id_{context}"]
 = Configuration requirements
 
-To use the {LightspeedShortName} cloud service, your organization must have the following subscriptions:
+== Licensing requirements
 
-* A trial or paid subscription to {PlatformName} 
+* *{LightspeedShortName} cloud service*
++
+To use the {LightspeedShortName} cloud service, you must meet *one* of the following requirements:
 
-* A trial or paid subscription to {ibmwatsonxcodeassistant}
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
++
+[NOTE]
+====
+A {LightspeedShortName} trial account does not require an {ibmwatsonxcodeassistant} subscription.
+====
 
+* *{LightspeedShortName} on-premise deployment*
++
 To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
 
-* A trial or paid subscription to {PlatformName} 
+** A trial or paid subscription to the {PlatformName} 
 
-* An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
+** An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
 
-You need the following {ibmwatsonxcodeassistant} information:
+== Setup requirements
+
+To set up {LightspeedshortName} for your organization, you need the following {ibmwatsonxcodeassistant} information:
 
 * *API key*
 +
@@ -24,8 +36,11 @@ A unique API key authenticates all requests made from {LightspeedShortName} to {
 * *Model ID*
 +
 A unique model ID identifies an {ibmwatsonxcodeassistant} model in your IBM Cloud account. The model ID that you configure in the Ansible Lightspeed administrator portal is used as the default model, and can be accessed by all Ansible Lightspeed users within your organization. 
- 
-IMPORTANT: You must configure both the API key and the model ID when you are initially configuring {LightspeedShortName}. 
+
+[IMPORTANT]
+====
+You must configure both the API key and the model ID when you are initially configuring {LightspeedShortName}.
+====
 
 
 
