--- a/lightspeed/modules/proc_provide-feedback.adoc
+++ b/lightspeed/modules/proc_provide-feedback.adoc
@@ -18,7 +18,10 @@ NOTE: On the login screen of the link:https://c.ai.ansible.redhat.com/[Ansible L
 
 .Prerequisites
 
-* You are part of an organization that has a trial or paid subscription to both {PlatformNameShort} and {ibmwatsonxcodeassistant}.
+Ensure that you meet *one* of the following requirements:
+
+* Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+* Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
 
 .Procedure
 
