--- a/lightspeed/modules/proc_generate-playbook.adoc
+++ b/lightspeed/modules/proc_generate-playbook.adoc
@@ -8,8 +8,12 @@ You can use the natural language interface in the Ansible VS Code extension to g
 
 .Prerequisites
 
-* You are part of an organization that has a trial or paid subscription to {PlatformName} and {ibmwatsonxcodeassistant} both.
-* You have installed and configured the Ansible VS Code extension. 
+* You meet *one* of the following requirements:
+
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
+
+* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
 
 .Procedure
 
