--- a/lightspeed/modules/proc_view-playbook-explanation.adoc
+++ b/lightspeed/modules/proc_view-playbook-explanation.adoc
@@ -8,8 +8,13 @@ You can request explanations for a newly created playbook as well as an existing
 
 .Prerequisites
 
-* You are part of an organization that has a trial or paid subscription to {PlatformName} and {ibmwatsonxcodeassistant} both.
-* You have installed and configured the Ansible VS Code extension.
+* You meet *one* of the following requirements:
+
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
+
+* You have xref:configuring-with-code-assistant_lightspeed-user-guide[installed and configured the Ansible VS Code extension].
+
 * You have opened the playbook whose explanation you want to view.  
 
 .Procedure
