AAP-20599-update: Documented info. about monitoring Lightspeed on-premise

--- a/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
+++ b/lightspeed/modules/con_overview-lightspeed-onpremise.adoc
@@ -62,3 +62,5 @@ Perform the following tasks to install and configure a {LightspeedshortName} on-
 . xref:configure-vscode-extension-onpremise-deployment_configuring-lightspeed-onpremise[Install and configure Ansible Visual Studio Code extension to connect to {LightspeedShortName} on-premise deployment]
 
 . Optional: If you want to connect to a different {ibmwatsonxcodeassistant}, xref:update-connection-secrets_configuring-lightspeed-onpremise[update the connection secrets on an existing {PlatformName} operator]
+
+. Optional: xref:monitor-lightspeed-onpremise-deployment_configuring-lightspeed-onpremise[Monitor your {LightspeedShortName} on-premise deployment]
