--- a/downstream/modules/platform/con-gs-manage-RBAC.adoc
+++ b/downstream/modules/platform/con-gs-manage-RBAC.adoc
@@ -8,5 +8,6 @@ The roles in RBAC refer to the levels of access that users have to the network.
 You can control what users can do with the components of {PlatformNameShort} at a broad or granular level depending on your RBAC policy. 
 You can select whether the user is a system administrator or normal user and align roles and access permissions with their positions within the organization. 
 
-You can define roles can with many permissions that can then be assigned to resources, teams, and users. The permissions that make up a role dictate what the assigned role allows. 
+You can define roles with many permissions that can then be assigned to resources, teams, and users. 
+The permissions that make up a role dictate what the assigned role allows. 
 Permissions are allocated with only the access needed for a user to perform the tasks appropriate for their role. 
