--- a/downstream/modules/platform/proc-gs-social-auth-github.adoc
+++ b/downstream/modules/platform/proc-gs-social-auth-github.adoc
@@ -2,28 +2,31 @@
 
 = Configuring GitHub authentication
 
-To set up social authentication for GitHub, you must obtain an OAuth2 key and secret for a web application.
-To do this, you must first register the new application with GitHub at https://github.com/settings/developers.
+You can connect GitHub identities to {PlatformNameShort} using OAuth. 
+To set up GitHub authentication, you need to obtain an OAuth2 key and secret by registering your organization-owned application from GitHub using the link:https://docs.github.com/en/apps/using-github-apps/installing-your-own-github-app[Installing your own GitHub App].
 
-To register the application, you must supply it with your homepage URL, which is the *Callback URL* shown in the *Details* tab of the *GitHub default settings* page.
-The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI.
+The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the required fields in the UI. 
+To register the application, you must supply it with your webpage URL, which is the Callback URL shown in the Authenticator details for your authenticator configuration. 
+For more information about accessing this, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/access_management_and_authentication/proc-gw-display-auth-details[Displaying authenticator details]. 
 
 .Procedure
-. From the navigation panel, select {MenuAEAdminSettings}.
-. On the *Settings* page, select *GitHub settings* from the list of *Authentication* options.
-. Select the *GitHub Default* tab if not already selected.
+
+. From the navigation panel, select {MenuAMAuthentication}.
+. Click btn:[Create authentication].
+. Select *GitHub* from the *Authentication type* list.
+. Enter a *Name* for this authentication setting.
+. When the application is registered, GitHub displays the *Client ID* and *Client Secret*:
+** Copy and paste the *GitHub Client ID* into the *GitHub OAuth2 Key* field. 
+** Copy and paste the *GitHub Client Secret* into the *GitHub OAuth2 Secret* field. 
+. Optional: Enter any *Additional Authenticator Fields* that this authenticator can take. 
+These fields are not validated and are passed directly back to the authenticator.
++ 
+[NOTE] 
+====
+Values defined in this field override the dedicated fields provided in the UI. 
+====
 +
-The *GitHub OAuth2 Callback URL* field is already pre-populated and non-editable.
-When the application is registered, GitHub displays the Client ID and Client Secret.
-
-. Click btn:[Edit] and copy and paste the GitHub Client ID into the *GitHub OAuth2 Key* field.
-. Copy and paste the GitHub Client Secret into the *GitHub OAuth2 Secret* field.
-+
-For more information about completing the mapping fields, see [ADD 2.5][Organization mapping] and [ADD 2.5 LINK][Team mapping].
-. Click btn:[Save].
-
-.Verification
-To verify that the authentication was configured correctly, logout of {ControllerName}.
-The login screen now displays the GitHub logo to enable logging in with those credentials.
-
-image:configure-controller-auth-github-logo.png[image]
+. To automatically create organizations, users and teams upon successful login, select *Create objects*. 
+. To enable this authentication method upon creation, select *Enabled*.
+. To remove a user for any groups they were previously added to when they authenticate from this source, select *Remove users*.
+. Click btn:[Next].
