Adding platform admin section to asciidoc (#1734)
* Adding platform admin section to asciidoc

Create Platform admin section of Getting started with AAP

https://issues.redhat.com/browse/AAP-29067

Affects `titles/getting-started`

* Second commit

* Adding final content to admin section

* Adding Github section to platform admin

--- a/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
+++ b/downstream/assemblies/platform/assembly-gs-platform-admin.adoc
@@ -6,11 +6,11 @@ As a platform administrator, {PlatformNameShort} can help you enable your users 
 
 This guide walks you through the basic steps to get set up as an administrator for {PlatformNameShort}, including configuring and maintaining the platform for users. 
 
-To get started as an administrator, learn how to: 
+To get started as an administrator, see the following: 
  
-* Log in to the platform as an administrator. 
-* Configure authentication for users by manually creating users, teams, and organizations
-* Configuring user access with role-based access control
+* xref:proc-gs-logging-in[Logging in for the first time]
+* xref:con-gs-config-authentication[Configure authentication]
+* xref:con-gs-manage-RBAC[Managing user access with role-based access control]
 
 include::platform/proc-gs-logging-in.adoc[leveloffset=+1]
 include::platform/con-gs-config-authentication.adoc[leveloffset=+1]
@@ -18,3 +18,4 @@ include::platform/con-gs-manage-RBAC.adoc[leveloffset=+1]
 include::platform/proc-controller-create-organization.adoc[leveloffset=+1]
 include::platform/proc-controller-creating-a-team.adoc[leveloffset=+1]
 include::platform/proc-gs-platform-admin-create-user.adoc[leveloffset=+1]
+include::platform/proc-gs-social-auth-github.adoc[leveloffset=+1]
