--- a/stories/assembly-azure-install.adoc
+++ b/stories/assembly-azure-install.adoc
@@ -35,8 +35,8 @@ include::topics/con-azure-aks-cidr.adoc[leveloffset=+3]
 include::topics/proc-azure-create-service-principal.adoc[leveloffset=+2]
 
 // KB articles
-include::topics/ref-azure-policy.adoc[leveloffset=+2]
-include::topics/proc-azure-entitling-subscription.adoc[leveloffset=+2]
+include::topics/con-azure-policy.adoc[leveloffset=+2]
+include::topics/con-azure-entitling-subscription.adoc[leveloffset=+2]
 
 // Deployment
 include::topics/proc-azure-deploy-aap.adoc[leveloffset=+1]
