AAP-25298-update: Updated trial urls and removed duplicate topic

--- a/lightspeed/modules/con_lightspeed-key-features.adoc
+++ b/lightspeed/modules/con_lightspeed-key-features.adoc
@@ -13,12 +13,18 @@
 +
 Organization administrators can now create and use fine-tuned, custom models that are trained on your organization's existing Ansible content. With this capability, you can tune the models to your organization's automation patterns and improve the code recommendation experience. 
 +
-You can configure multiple custom models for your organization. For example, you can create a custom model for your corporate IT automation team and a different one for your engineering team's infrastructure. You can also configure a custom model to make it available for all Ansible users or select Ansible users in your organization.
+You can configure multiple custom models for your organization. For example, you can create a custom model for your corporate IT automation team and a different one for your engineering team's infrastructure. You can also configure a custom model to make it available for all Ansible users or select Ansible users in your organization. 
 
 * *{LightspeedShortName} cloud service and on-premise deployments*
 +
 {LightspeedShortName} is available both as a cloud service and as an on-premise deployment. 
 {LightspeedShortName} on-premise deployments provide the {PlatformName} customers more control over their data and supports compliance with enterprise security policies. For example, organizations in sensitive industries with data privacy or air-gapped requirements can use on-premise deployments of both {LightspeedShortName} and {ibmwatsonxcodeassistant} for {LightspeedShortName} on Cloud Pak for Data. {LightspeedShortName} on-premise deployments are supported on {PlatformName} version 2.4.
+
+* *{LightspeedShortName} trial*
++
+Existing Ansible users can now start a free 90-day {LightspeedShortName} cloud service trial. You can create single-task and multitask recommendations, generate playbooks, and view playbook explanations with a trial account. 
++
+To start your {LightspeedShortName} trial, you need a trial or paid subscription to the {PlatformName}; however, you do not need a trial or paid subscription to {ibmwatsonxcodeassistant}. For more information, see xref:start-lightspeed-trial_lightspeed-user-guide[Starting a trial of {LightspeedShortName}].
 
 * *Playbook and task generation*
 
