--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-intro.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-intro.adoc
@@ -4,7 +4,18 @@
 = Overview
 {LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} is also the cloud service that enables the integration of generative AI into Ansible Automation Platform.
 
-To use {LightspeedFullName}, your organization must have:
+To use the {LightspeedShortName} cloud service, you must meet *one* of the following requirements:
 
-* A trial or paid subscription to the {PlatformNameShort} 
-* A trial or paid subscription to {ibmwatsonxcodeassistant}
+** Your organization has a trial or paid subscription to both the {PlatformName} and {ibmwatsonxcodeassistant}.
+** Your organization has a trial or paid subscription to the {PlatformName}, and you have a {LightspeedShortName} trial account.
++
+[NOTE]
+====
+A {LightspeedShortName} trial account does not require an {ibmwatsonxcodeassistant} subscription.
+====
+
+To use an on-premise deployment of {LightspeedShortName}, your organization must have the following subscriptions:
+
+** A trial or paid subscription to the {PlatformName} 
+
+** An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
