--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-august2024.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-august2024.adoc
@@ -9,4 +9,4 @@ This release includes the following new feature:
 +
 Existing Ansible users can now start a free 90-day {LightspeedShortName} cloud service trial. You can create single-task and multitask recommendations, generate playbooks, and view playbook explanations with a trial account. 
 +
-To start your {LightspeedShortName} trial, you need a trial or paid subscription to the {PlatformName}; however, you do not need a trial or paid subscription to {ibmwatsonxcodeassistant}. 
+To start your {LightspeedShortName} trial, you need a trial or paid subscription to the {PlatformName}; however, you do not need a trial or paid subscription to {ibmwatsonxcodeassistant}. For more information, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#start-lightspeed-trial_lightspeed-user-guide[Starting a trial of {LightspeedShortName}].
