AAP-29213 - fixing formatting issues

--- a/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-enterprise-team-settings.adoc
@@ -22,17 +22,19 @@ The OAuth2key (Client ID) and secret (Client Secret) are used to supply the requ
 +
 .. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
 .. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
++
 . In the *Base URL* field, enter the hostname of the GitHub Enterprise instance, for example, `https://github.orgexample.com`.
 . In the *Github OAuth2 Enterprise API URL* field, enter the API URL of the GitHub Enterprise instance, for example, `https://github.example.com/api/v3`.
 . Enter the OAuth2 key (Client ID) from your GitHub developer application in the *GitHub OAuth2* team ID field.
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
