--- a/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
+++ b/downstream/modules/platform/proc-controller-google-oauth2-settings.adoc
@@ -30,13 +30,14 @@ If not, use the credentials Google supplied during the web application setup pro
 * *OIDC JWT Algorithm(s)*
 * *OIDC JWT*
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
