--- a/downstream/modules/platform/proc-controller-set-up-LDAP.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-LDAP.adoc
@@ -44,9 +44,11 @@ To determine the parameters that a specific *LDAP Group Type* requires, refer to
 . In the *LDAP Group Search* field, specify which groups should be searched and how to search them. 
 . In the *LDAP User Attribute Map* field, enter user attributes to map LDAP fields to your Ansible Automation Platform users for example, email or first_name. 
 . In the *LDAP User Search* field, enter where to search for users during authentication. 
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
