--- a/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
@@ -36,9 +36,11 @@ OpenID Connect (OIDC) uses the OAuth 2.0 framework. It enables third-party appli
 +
 . Use the *Verify OIDC Provider Certificate* to enable or disable the OIDC provider SSL certificate verification.
 . Use the *Redirect* State to enable or disable the state parameter in the redirect URI. It is recommended that this is enabled to prevent Cross Site Request Forgery (CSRF) attacks.
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [NOTE]
