--- a/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-tacacs+.adoc
@@ -20,14 +20,15 @@ This feature is deprecated and will be removed in a future release.
 +
 * Hostname of TACACS+ Server: Provide the hostname or IP address of the TACACS+ server with which to authenticate. If you leave this field blank, TACACS+ authentication is disabled.
 * TACACS+ Authentication Protocol: The protocol used by the TACACS+ client. The options are ascii or pap.
-*Shared secret for authenticating to TACACS+ server: The secret key for TACACS+ authentication server.
-+
+* Shared secret for authenticating to TACACS+ server: The secret key for TACACS+ authentication server.
 . The *TACACS+ client address sending enabled* is disabled by default. To enable client address sending, select the checkbox.
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
