--- a/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
+++ b/downstream/modules/platform/proc-controller-github-organization-setttings.adoc
@@ -18,17 +18,19 @@ The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the req
 +
 .. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
 .. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
++
 . Enter the name of your GitHub organization, as used in your organization’s URL, for example, `https://github.com/<yourorg>/` in the *GitHub OAuth Organization Name* field.
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
 . Enter the authorization scope for users in the *GitHub OAuth2 Scope* field. The default is `read:org`.
-
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
