--- a/downstream/modules/platform/proc-controller-github-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-settings.adoc
@@ -16,13 +16,14 @@ The OAuth2 key (Client ID) and secret (Client Secret) are used to supply the req
 .. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
 .. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
