--- a/downstream/modules/platform/proc-controller-github-team-settings.adoc
+++ b/downstream/modules/platform/proc-controller-github-team-settings.adoc
@@ -17,16 +17,18 @@ Each key and secret must belong to a unique application and cannot be shared or 
 +
 .. Copy and paste the GitHub Client ID into the GitHub OAuth2 Key field. 
 .. Copy and paste the GitHub Client Secret into the GitHub OAuth2 Secret field. 
++
 . Copy and paste GitHub’s team ID in the *GitHub OAuth2 Team ID* field.
 . Enter the authorization scope for users in the GitHub OAuth2 Scope field. The default is `read:org`. 
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
