--- a/downstream/modules/platform/proc-controller-set-up-azure.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-azure.adoc
@@ -16,16 +16,18 @@ Each key and secret must belong to a unique application and cannot be shared or 
 Following instructions for link:https://docs.microsoft.com/en-us/azure/active-directory/develop/quickstart-register-app[registering your application with the Microsoft identity platform], supply the key (shown at one time only) to the client for authentication. 
 +
 . Copy and paste the secret key created for your Microsoft Azure AD application to the OIDC Secret field.
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
 
-include::snippets/snip-gw-authentication-verification.adoc
+include::snippets/snip-gw-authentication-verification.adoc[]
 
 [role="_additional-resources"]
 .Additional resources
