--- a/downstream/modules/platform/proc-controller-set-up-radius.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-radius.adoc
@@ -12,11 +12,12 @@ You can configure {PlatformNameShort} to centrally use RADIUS as a source for au
 . Enter the host or IP of the RADIUS server in the *RADIUS Server* field. If you leave this field blank, RADIUS authentication is disabled.
 . Enter the *Shared secret for authenticating to RADIUS server*.
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
