--- a/downstream/modules/platform/proc-gw-keycloak-authentication.adoc
+++ b/downstream/modules/platform/proc-gw-keycloak-authentication.adoc
@@ -18,11 +18,13 @@ You can configure {PlatformNameShort} to integrate Keycloak to manage user authe
 . Enter the Client ID from your Keycloak installation in the *Keycloak OIDC Key* field.
 . Enter the RS256 public key provided by your Keycloak realm in the *Keycloak Public Key* field. 
 . Enter the OIDC secret (Client Secret) from your Keycloak installation in the *Keycloak OIDC Secret* field.
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
++
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
