--- a/downstream/modules/platform/proc-gw-local-authentication.adoc
+++ b/downstream/modules/platform/proc-gw-local-authentication.adoc
@@ -18,11 +18,13 @@ A local authenticator is automatically created by the {PlatformNameShort} instal
 . Select *Local* from the *Authentication type* list.
 . Click btn:[Next]. 
 . Enter a *Name* for this Local configuration. The configuration name is required, must be unique across all authenticators, and must not be longer than 512 characters. 
++
 include::snippets/snip-gw-authentication-additional-auth-fields.adoc
 +
 include::snippets/snip-gw-authentication-common-checkboxes.adoc
++
 . Click btn:[Next].
 
 [role="_additional-resources"]
 .Next steps
-include::snippets/snip-gw-authentication-next-steps.adoc
+include::snippets/snip-gw-authentication-next-steps.adoc[]
