AAP-29223 - formatting fixes

--- a/downstream/modules/platform/ref-controller-organization-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-organization-notifications.adoc
@@ -7,12 +7,11 @@
 When {ControllerName} is enabled on the platform, you can review any notifier integrations you have set up and manage their settings within the organization resource. 
 
 .Procedure
-. From the navigation panel, select Access Management › Organizations.
+. From the navigation panel, select {MenuAMOrganizations}.
 . From the Organizations list view, select the organization to which you want to manage notifications.
 //ddacosta - this might change to Notifiers tab.
 . Select the *Notification* tab. 
 . Use the toggles to enable or disable the notifications to use with your particular organization. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-enable-disable-notifications[Enable and disable notifications].
 . If no notifiers have been set up, select {MenuAEAdminJobNotifications} from the navigation panel.
-
 
 For information on configuring notification types, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-notifications#controller-notification-types[Notification types].
