AAP-29223 Fixed duplicate ids in assemlies and other corrections

--- a/downstream/assemblies/platform/assembly-gw-managing-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-managing-authentication.adoc
@@ -2,9 +2,11 @@ ifdef::context[:parent-context: {context}]
 
 :_mod-docs-content-type: ASSEMBLY
 
-[id="gw-mapping_{context}"]
+[id="gw-managing-authentication_{context}"]
 
 = Managing authentication in {PlatformNameShort}
+
+:context: gw-manage-auth
 
 After you have configured your authentication settings, you can view a list of authenticators, search, sort and view the details for each authenticator configured on the system.
 
