--- a/downstream/assemblies/platform/assembly-gw-settings.adoc
+++ b/downstream/assemblies/platform/assembly-gw-settings.adoc
@@ -4,6 +4,8 @@
 
 = Configuring {PlatformNameShort}
 
+:context: gw-settings
+
 You can configure Ansible Automation platform from the *Settings* menu using the following selections:
 
 * *Subscriptions*
