--- a/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
@@ -6,6 +6,8 @@ ifdef::context[:parent-context: {context}]
 
 = Configuring token-based authentication
 
+:context: gw-token-auth
+
 [TBD] The content for this is in progress in separate link:https://docs.google.com/document/d/1GLk5zcD-8hZxU61Ik8wASDofkX7iQo5IJvkCOv5gRMw/edit?usp=sharing[Applications] and link:https://docs.google.com/document/d/1w9KjK8CybZ3w0u0DGNf0rNDC72vomwbdt5rZkUZCaBk/edit#bookmark=id.1rtgxk9mwxi0[Token-based authentication] drafts. Once converted/updated in AsciiDoc and in the repo, update this section to include those modules. 
 
 
