--- a/downstream/assemblies/platform/assembly-gw-managing-access.adoc
+++ b/downstream/assemblies/platform/assembly-gw-managing-access.adoc
@@ -4,6 +4,8 @@
 
 = Managing access with role based access control
 
+:context: gw-manage-rbac
+
 Role-based access control (RBAC) restricts user access based on their role within an organization. The roles in RBAC refer to the levels of access that users have to the network.
 
 You can control what users can do with the components of {PlatformNameShort} at a broad or granular level depending on your RBAC policy. You can designate whether the user is a system administrator or normal user and align roles and access permissions with their positions within the organization.
