AAP-29213 - fixed duplicate id and removed duplicate file

--- a/downstream/modules/platform/proc-gw-config-keycloak-settings.adoc
+++ b/downstream/modules/platform/proc-gw-config-keycloak-settings.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="gw-local-authentication"]
+[id="gw-keycloak-authentication"]
 
 = Configuring local authentication
 
