--- a/downstream/modules/platform/proc-gw-local-authentication.adoc
+++ b/downstream/modules/platform/proc-gw-local-authentication.adoc
@@ -19,9 +19,9 @@ A local authenticator is automatically created by the {PlatformNameShort} instal
 . Click btn:[Next]. 
 . Enter a *Name* for this Local configuration. The configuration name is required, must be unique across all authenticators, and must not be longer than 512 characters. 
 +
-include::snippets/snip-gw-authentication-additional-auth-fields.adoc
+include::snippets/snip-gw-authentication-additional-auth-fields.adoc[]
 +
-include::snippets/snip-gw-authentication-common-checkboxes.adoc
+include::snippets/snip-gw-authentication-common-checkboxes.adoc[]
 +
 . Click btn:[Next].
 
