--- a/downstream/modules/eda/proc-eda-set-up-token.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-token.adoc
@@ -1,6 +1,6 @@
 [id="eda-set-up-token-to-authenticate"]
 
-= Setting up a token to authenticate to {PlatformNameShort} Controller
+= Setting up a token to authenticate to {ControllerName}
 
 .Prerequisites
 
@@ -24,7 +24,7 @@ For more information about creating the token, see the link:https://docs.ansible
 +
 [NOTE]
 ====
-The token must be in write-scope.
+Your token must be in write-scope and if you are the assigned user, you must have permission to execute job and workflow templates.
 ====
 . Select btn:[Create controller token].
 
