--- a/downstream/modules/platform/proc-controller-user-permissions.adoc
+++ b/downstream/modules/platform/proc-controller-user-permissions.adoc
@@ -12,7 +12,7 @@ You can set permissions through an inventory, project, job template and other re
 . Select the team *Name* to which you want to add roles.
 . Select the *Roles* tab and click btn:[Add roles].
 +
-include::snippets/snip-gw-roles-note-multiple-components.adoc
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Select a *Resource type* and click btn:[Next]. 
 . Select the resources to receive the new roles and click btn:[Next].
