--- a/downstream/modules/platform/proc-gw-remove-roles-team.adoc
+++ b/downstream/modules/platform/proc-gw-remove-roles-team.adoc
@@ -12,7 +12,7 @@ You can remove roles from a team by selecting the - icon next to the resource. T
 . Select the team *Name* from which you want to remove roles.
 . Select the *Roles* tab.
 +
-include::snippets/snip-gw-roles-note-multiple-components.adoc
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Select the checkbox next to each resource you want to remove and click *Remove selected roles* from the *{MoreActionsIcon}* list on the menu bar.
 . Select the checkbox to confirm removal of the selected roles and click *Remove role*.
