--- a/downstream/modules/platform/ref-controller-user-roles.adoc
+++ b/downstream/modules/platform/ref-controller-user-roles.adoc
@@ -5,13 +5,14 @@
 = Adding roles for a user
 
 You can grant access for users to use, read, or write credentials by assigning roles to them.
+
 .Procedure
 . From the navigation panel, select {MenuAMUsers}.
 . From the Users list view, click on the user to which you want to add roles.
 . Select the *Roles* tab to display the set of roles assigned to this user. These provide the ability to read, modify, and administer resources.
 . To add new roles, click btn:[Add roles].
 +
-include::snippets/snip-gw-roles-note-multiple-components.adoc
+include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Select a Resource type and click btn:[Next]. 
 . Select the resources that will receive new roles and click btn:[Next].
