--- a/downstream/modules/platform/proc-install-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-aap-operator.adoc
@@ -11,6 +11,6 @@
 . Select *Installation Mode*, *Installed Namespace*, and *Approval Strategy*.
 . Click btn:[Install].
 
-The installation process will begin. When installation is complete, a modal will appear notifying you that the {PlatformName} operator is installed in the specified namespace.
+The installation process will begin. When installation is complete, a modal will appear notifying you that the {OperatorPlatform} is installed in the specified namespace.
 
-* Click btn:[View Operator] to view your newly installed {PlatformName} operator.
+* Click btn:[View Operator] to view your newly installed {OperatorPlatform}.
