Updated Schedules information
Update procedures for Schedules

https://issues.redhat.com/browse/AAP-29720

--- a/downstream/modules/platform/proc-controller-define-schedule-rules.adoc
+++ b/downstream/modules/platform/proc-controller-define-schedule-rules.adoc
@@ -5,7 +5,7 @@
 Enter the following information:
 
 * *Frequency*:  Enter how frequently the schedule runs.
-//* *Interval*: I don't know what this indicates.
+* *Interval*:
 * *Week Start*: Select the day of the week that you want the week to begin.
 * *Weekdays*: Select the days of the week on which to run the schedule.
 * *Months*: Select the months of the year on which to run the schedule
