--- a/downstream/assemblies/platform/assembly-ug-controller-schedules.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-schedules.adoc
@@ -6,7 +6,8 @@ From the navigation panel, click {MenuAESchedules} to access your configured sch
 The schedules list can be sorted by any of the attributes from each column using the directional arrows.
 You can also search by name, date, or the name of the month in which a schedule runs.
 
-Each schedule has options to enable or disable that schedule using the *On* or *Off* toggle next to the schedule name.
+Use the *On* or *Off* toggle to stop an active schedule or activate a stopped schedule.
+
 Click the Edit image:leftpencil.png[Edit,15,15] icon to edit a schedule.
 
 image::ug-schedules-sample-list.png[Schedules sample list]
