--- a/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
@@ -10,9 +10,20 @@ To create a new schedule on the *Schedules* page:
 
 . From the navigation panel, select {MenuAESchedules}.
 . Click btn:[Create schedule]. This opens the *Create Schedule* window.
+. Select a *Resource type* onto which this schedule is applied.
 +
-image::ug-generic-create-schedule.png[Create schedule]
-+
+Select from:
+
+* *Job template* 
+** For *Job template* select a *Job template* from the menu. 
+* *Workflow job template*
+** For *Workflow job template* select a *Workflow job template* from the menu. 
+* *Inventory source*
+** For *Inventory source* select an *Inventory* and an *Inventory source* from the appropriate menu.
+* *Project sync*
+** For *Project sync* select a *Project* from the menu. 
+* *Management job template*
+** For *Management job template* select a *Workflow job template* from the menu. 
 
 To create a new schedule from a resource page:
 
@@ -22,7 +33,7 @@ This can be a template, project, or inventory source.
 . Click btn:[Create schedule]. This opens the *Create Schedule* window.
 
 .For both procedures
-. Enter the appropriate details into the following fields:
+. For *Job template* and *Project sync* enter the appropriate details into the following fields
 
 * *Schedule name*: Enter the name.
 * Optional: *Description*: Enter a description.
@@ -43,4 +54,4 @@ To ensure your schedules are correctly created, set your schedules in UTC time.
 . Click btn:[Next].
 The *Define rules* page is displayed.
 
-//Use the *On* or *Off* toggle to stop an active schedule or activate a stopped schedule.
+
