AAP-29249 RHDH Update YAML examples in plug-ins install doc

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -114,6 +114,7 @@
 :ToolsName: Ansible development tools
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
+:RHDHVers: 1.2
 :RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
