--- a/downstream/modules/devtools/proc-rhdh-add-devtools-container.adoc
+++ b/downstream/modules/devtools/proc-rhdh-add-devtools-container.adoc
@@ -15,7 +15,7 @@ Add the following code:
 +
 ----
 upstream:
-  backstage: |
+  backstage:
     ...
     extraContainers:
       - command:
@@ -27,11 +27,6 @@ upstream:
         name: ansible-devtools-server
         ports:
           - containerPort: 8000
-    image:  
-      pullPolicy: Always
-      pullSecrets:
-        - ...
-        - rhdh-secret-registry
     ...
 ----
 +
