--- a/downstream/modules/devtools/proc-rhdh-add-pull-secret-helm.adoc
+++ b/downstream/modules/devtools/proc-rhdh-add-pull-secret-helm.adoc
@@ -12,16 +12,16 @@ The Ansible Development Container download requires a Red Hat Customer Portal ac
 . Create a new link:https://access.redhat.com/terms-based-registry/[Red Hat Registry Service account], if required.
 . Click the token name under the *Account name* column.
 . Select the *OpenShift Secret* tab and follow the instructions to add the pull secret to your {RHDH} OpenShift project.
-. Add the new secret to the {RHDH} Helm configuration:
+. Add the new secret to the {RHDH} Helm configuration, replacing `<your-redhat-registry-pull-secret>` with the name of the secret you generated on the Red Hat Registry Service Account website:
 +
 ----
 upstream:
-  backstage: |
+  backstage:
     ...
-    image:  
+    image:
       ...
       pullSecrets:
-        - rhdh-secret-registry
+        - <your-redhat-registry-pull-secret>
     ...
 
 ----
