--- a/downstream/assemblies/devtools/assembly-rhdh-telemetry-capturing.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-telemetry-capturing.adoc
@@ -1,6 +1,6 @@
-:_mod-docs-content-type: PROCEDURE
-
+ifdef::context[:parent-context-of-rhdh-telemetry-capturing: {context}]
 [id="rhdh-configure-telemetry_{context}"]
+
 = {RHDH} data telemetry capturing
 
 {RHDH} (RHDH) sends telemetry data to Red Hat using the `backstage-plugin-analytics-provider-segment` plug-in, which is enabled by default.
@@ -20,3 +20,5 @@ For more information, refer to the
 link:{BaseURL}/red_hat_developer_hub/1.2/html-single/administration_guide_for_red_hat_developer_hub/assembly-rhdh-telemetry#assembly-rhdh-telemetry[Telemetry data collection]
 section of the _Administration guide for Red Hat Developer Hub_.
 
+ifdef::parent-context-of-rhdh-telemetry-capturing[:context: {parent-context-of-rhdh-telemetry-capturing}]
+ifndef::parent-context-of-rhdh-telemetry-capturing[:!context:]
