Updating procedure steps to better orientate the user

--- a/downstream/modules/platform/proc-create-keycloak-instance.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-instance.adoc
@@ -8,6 +8,7 @@ From here you provide an external Postgres or one will be created for you.
 
 .Procedure
 
+/ Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
 . Select the `rh-sso` project.
 . Select the *{OperatorRHSSO}*.
