--- a/downstream/modules/platform/proc-hub-ingress-options.adoc
+++ b/downstream/modules/platform/proc-hub-ingress-options.adoc
@@ -6,8 +6,10 @@ The {OperatorPlatform} installation form allows you to further configure your {H
 
 .Procedure
 
-. Go to menu:Operators[Installed Operators].
-. Locate the *Automation Hub* tab. 
+. Log in to {OCP}.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
+. Select the *Automation Hub* tab. 
 . For new instances, click btn:[Create AutomationHub].
 .. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationHub].
 . Click btn:[Advanced Configuration].
