--- a/downstream/modules/platform/proc-update-rhsso-client.adoc
+++ b/downstream/modules/platform/proc-update-rhsso-client.adoc
@@ -6,6 +6,7 @@ After you install {HubName} and you know the URL of the instance, you must updat
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
 . Select the RH-SSO project.
 . Click btn:[Red Hat Single Sign-On Operator].
