--- a/downstream/modules/platform/proc-access-hub-operator-ui.adoc
+++ b/downstream/modules/platform/proc-access-hub-operator-ui.adoc
@@ -5,6 +5,7 @@
 You can access the {HubName} through the platform gateway or through the following procedure. 
 
 .Procedure
+. Log into {OCP}.
 . Navigate to menu:Networking[Routes].
 . Under *Location*, click on the URL for your {HubName} instance.
 
