--- a/downstream/modules/platform/proc-add-controller-access-token.adoc
+++ b/downstream/modules/platform/proc-add-controller-access-token.adoc
@@ -9,6 +9,7 @@ NOTE: You can only create OAuth 2 Tokens for your own user through the API or UI
 .Procedure
 To create an OAuth2 token for your user in the platform gateway UI:
 
+. Log in to {OCP}. 
 . In the navigation panel, select menu:Access Management[Users].
 . Select the username you want to create a token for.
 . Select menu:Tokens[Automation Execution]
