--- a/downstream/modules/platform/proc-create-a-user.adoc
+++ b/downstream/modules/platform/proc-create-a-user.adoc
@@ -6,6 +6,7 @@ This procedure creates a Keycloak user, with the `hubadmin` role, that can log i
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
 . Select the {OperatorRHSSO} project.
 . Select the *Keycloak Realm* tab and click btn:[Create Keycloak User].
