--- a/downstream/modules/platform/proc-create-keycloak-client.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-client.adoc
@@ -8,6 +8,7 @@ When Single Sign-On validates or issues the `OAuth` token, the client provides t
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
 . Select the {OperatorRHSSO} project.
 . Select the *Keycloak Client* tab and click btn:[Create Keycloak Client].
