--- a/downstream/modules/platform/proc-create-keycloak-realm.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-realm.adoc
@@ -8,6 +8,7 @@ Realms are isolated from one another and can only manage and authenticate the us
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
 . Select the *{OperatorRHSSO}* project.
 . Select the *Keycloak Realm* tab and click btn:[Create Keycloak Realm].
