--- a/downstream/modules/platform/proc-installing-hub-using-operator.adoc
+++ b/downstream/modules/platform/proc-installing-hub-using-operator.adoc
@@ -6,9 +6,11 @@ Use the following procedure to install {HubName} using the {OperatorPlatform}.
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
-. Select the {PlatformNameShort}.
-. Select the {HubNameStart} tab and click btn:[Create {HubNameStart}].
+. Select your {OperatorPlatform} deployment.
+. Select the {HubNameStart} tab.
+. Click btn:[Create {HubNameStart}].
 . Select btn:[YAML view].
 The YAML should be similar to:
 +
