--- a/downstream/modules/platform/proc-installing-the-ansible-platform-operator.adoc
+++ b/downstream/modules/platform/proc-installing-the-ansible-platform-operator.adoc
@@ -4,8 +4,10 @@
 
 .Procedure
 
-. Navigate to menu:Operator[Operator Hub] and search for the {PlatformNameShort} Operator.
-. Select the {PlatformNameShort} Operator project.
+. Log in to {OCP}.
+. Navigate to menu:Operator[Operator Hub]. 
+. Search for the {OperatorPlatform}.
+. Select the {OperatorPlatform} project.
 . Click on the Operator tile.
 . Click btn:[Install].
 . Select a Project to install the Operator into.
