--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -8,6 +8,7 @@ This instance links the {ControllerName}, {HubName}, and {EDAName} deployments t
 
 To access your *{PlatformNameShort}* instance:
 
+. Log in to {OCP}.
 . Navigate to menu:Networking[Routes]
 . Click the link under *Location* for *{PlatformNameShort}*.
 . This redirects you to the {PlatformNameShort} login page. Enter "admin" as your username in the *Username* field.
