--- a/downstream/assemblies/platform/assembly-installing-controller-operator.adoc
+++ b/downstream/assemblies/platform/assembly-installing-controller-operator.adoc
@@ -47,8 +47,8 @@ When an instance of {ControllerName} is removed, the associated PVCs are not aut
 //include::platform/proc-creating-controller-form-view.adoc[leveloffset=+2]
 include::platform/proc-configuring-controller-image-pull-policy.adoc[leveloffset=+2]
 
-// removing this section until we add the new guide for gateway specific
-//include::platform/proc-configuring-controller-ldap-security.adoc[leveloffset=+2]
+// removing this section until we add the new guide for gateway specific - need to add a link to Donna's  doc
+// include::platform/proc-configuring-controller-ldap-security.adoc[leveloffset=+2]
 include::platform/proc-configuring-controller-route-options.adoc[leveloffset=+2]
 include::platform/proc-controller-ingress-options.adoc[leveloffset=+2]
 include::platform/proc-operator-external-db-controller.adoc[leveloffset=+1]
