--- a/downstream/modules/platform/proc-controller-ingress-options.adoc
+++ b/downstream/modules/platform/proc-controller-ingress-options.adoc
@@ -6,8 +6,10 @@ The {OperatorPlatform} installation form allows you to further configure your {C
 
 .Procedure
 
-. Go to menu:Operators[Installed Operators].
-. Locate the *Automation Controller* tab. 
+. Log in to {OCP}.
+. Navigate to menu:Operators[Installed Operators].
+. Select your {OperatorPlatform} deployment.
+. Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
 .. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
 . Click btn:[Advanced configuration].
