--- a/downstream/modules/platform/proc-determine-hub-route.adoc
+++ b/downstream/modules/platform/proc-determine-hub-route.adoc
@@ -6,6 +6,7 @@ Use the following procedure to determine the hub route.
 
 .Procedure
 
+. Log in to {OCP}.
 . Navigate to menu:Networking[Routes].
 . Select the project you used for the install.
 . Copy the location of the `private-ah-web-svc` service.
