Updated schedules information
Correction

Update procedures for Schedules

https://issues.redhat.com/browse/AAP-29720

--- a/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-schedule.adoc
@@ -33,7 +33,7 @@ This can be a template, project, or inventory source.
 . Click btn:[Create schedule]. This opens the *Create Schedule* window.
 
 .For both procedures
-. For *Job template* and *Project sync* enter the appropriate details into the following fields
+. For *Job template* and *Project sync* enter the appropriate details into the following fields:
 
 * *Schedule name*: Enter the name.
 * Optional: *Description*: Enter a description.
