--- a/downstream/modules/platform/proc-controller-ingress-options.adoc
+++ b/downstream/modules/platform/proc-controller-ingress-options.adoc
@@ -11,7 +11,7 @@ The {OperatorPlatform} installation form allows you to further configure your {C
 . Select your {OperatorPlatform} deployment.
 . Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
-.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
+.. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AutomationController].
 . Click btn:[Advanced configuration].
 . Under *Ingress type*, click the drop-down menu and select *Ingress*.
 . Under *Ingress annotations*, enter any annotations to add to the ingress.
