--- a/downstream/modules/platform/proc-create-keycloak-instance.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-instance.adoc
@@ -10,7 +10,7 @@ From here you provide an external Postgres or one will be created for you.
 
 / Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
-. Select the `rh-sso` project.
+. Select the *RH-SSO* project.
 . Select the *{OperatorRHSSO}*.
 . On the {OperatorRHSSO} details page select btn:[Keycloak].
 . Click btn:[Create instance].
