--- a/downstream/modules/platform/proc-update-rhsso-client.adoc
+++ b/downstream/modules/platform/proc-update-rhsso-client.adoc
@@ -8,7 +8,7 @@ After you install {HubName} and you know the URL of the instance, you must updat
 
 . Log in to {OCP}.
 . Navigate to menu:Operator[Installed Operators].
-. Select the RH-SSO project.
+. Select the *RH-SSO* project.
 . Click btn:[Red Hat Single Sign-On Operator].
 . Select btn:[Keycloak Client].
 . Click on the automation-hub-client-secret client.
