--- a/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-image-pull-policy.adoc
@@ -10,7 +10,7 @@ Use this procedure to configure the image pull policy on your {ControllerName}.
 . Select your {OperatorPlatform} deployment.
 . Select the *Automation Controller* tab. 
 . For new instances, click btn:[Create AutomationController].
-.. For existing instances, you can edit the YAML view by clicking {MoreActionsIcon} and then btn:[Edit AutomationController].
+.. For existing instances, you can edit the YAML view by clicking the  {MoreActionsIcon} icon and then btn:[Edit AutomationController].
 . Click btn:[advanced Configuration].
 Under *Image Pull Policy*, click on the radio button to select
 * *Always*
