Add EDA logging chapter to user guide
[Doc] - EDA logging updates

https://issues.redhat.com/browse/AAP-29259

Affects `titles/eda/eda-user-guide`

--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -20,3 +20,4 @@ include::eda/assembly-eda-decision-environments.adoc[leveloffset=+1]
 include::eda/assembly-eda-rulebook-activations.adoc[leveloffset=+1]
 include::eda/assembly-eda-rule-audit.adoc[leveloffset=+1]
 include::eda/assembly-eda-performance-tuning.adoc[leveloffset=+1]
+include::eda/assembly-eda-logging-strategy.adoc[leveloffset=+1]
