Saas modules creation for service definition

--- a/stories/topics/con-saas-intro.adoc
+++ b/stories/topics/con-saas-intro.adoc
@@ -1,5 +1,5 @@
 [id="con-saas-intro"]
-= Introduction 
+= About {SaaSonAWS}
 {SaaSonAWS} links your {AWS} (AWS) offering to your Red{nbsp}Hat account which enables access to {PlatformNameShort}. 
 When you subscribe to {SaaSonAWSShort}, Red{nbsp}Hat deploys and configures an  {PlatformNameShort} environment for you. 
 
