--- a/stories/assembly-saas-intro.adoc
+++ b/stories/assembly-saas-intro.adoc
@@ -3,7 +3,12 @@ ifdef::context[:parent-context: {context}]
 :context: saas-intro
 
 [id="saas-intro"]
-= Introduction to {SaaSonAWS}
+= Understanding {SaaSonAWS}
+
+include::topics/con-saas-intro.adoc[leveloffset=+1]
+include::topics/con-saas-automation.adoc[leveloffset=+1]
+include::topics/ref-saas-egress-model.adoc[leveloffset=+2]
+include::topics/ref-saas-mesh-ingress-model.adoc[leveloffset=+2]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
