AAP-25515 Update new RH AAP credential setup chapter

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -26,13 +26,14 @@ Credential type:: Click the list and select *{PlatformName}*.
 ====
 When you select the credential type, the *Type Details* section is displayed with fields that are applicable for the credential type you chose.   
 ====
-. In the required {PlatformName} field, enter your automation controller URL.
+. In the required {PlatformName} field, enter your automation controller URL (for example, https:://<<your_controller_host>>/api/controller).
 //[JMS]Confirm that a valid password is not required. The daily build at https://ci-gw-20240816.gcp.testing.ansible.com/ no longer shows a required password.
+. Enter a valid username and password or an Oauth Token. 
 . Click btn:[Create controller token].
 
 After saving the credential, the credentials Details page is displayed. From there or the Credentials list view, you can edit or delete it.
 
 [NOTE]
 ====
-After you have saved your credential type, it cannot be changed.
+After you have saved the credential type for your credential, it cannot be changed.
 ====
