AAP-29213 - formatting fixes and UI updates

--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -7,7 +7,7 @@ To add roles for a user, the role must already exist. See xref:proc-gw-roles_aut
 
 .Procedure
 . From the navigation panel, select {MenuAMOrganizations}.
-. From the Organizations list view, select the organization to which you want to add a user. 
+. From the *Organizations* list view, select the organization to which you want to add a user. 
 . Click the *Users* tab to add users.
 . Click btn:[Add users] and select one or more users from the list by clicking the checkbox next to the name to add them as members.
 . Click btn:[Next].
