--- a/downstream/modules/platform/proc-controller-creating-a-team.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-team.adoc
@@ -13,7 +13,7 @@ To add a user or administrator to a team, the user must have already been create
 . From the navigation panel, select {MenuAMTeams}.
 . Click btn:[Create team].
 . Enter a *Name* and optionally give a *Description* for the team. 
-. Select an organization from the *Organization* list to which you want to associate this team.
+. Select an *Organization* to be associated with this team.
 +
 [NOTE]
 ====
