--- a/downstream/modules/platform/proc-controller-creating-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-user.adoc
@@ -7,23 +7,23 @@
 You can assign two types of users: 
 
 Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges.
-System administrator:: A System administrator (also known as a Superuser) has full system administration privileges — with full read and write privileges over the entire installation. A System administrator is typically responsible for managing all aspects of and delegating responsibilities for day-to-day work to various users.
-
-Select the Organization to be assigned for this user. For information about creating a new organization or team, refer to xref:proc-controller-create-organization[Creating an organization].
+{PlatformNameShort} Administrator:: An administrator (also known as a Superuser) has full system administration privileges — with full read and write privileges over the entire installation. An administrator is typically responsible for managing all aspects of and delegating responsibilities for day-to-day work to various users.
+{PlatformNameShort} Auditor:: Auditors have read-only capability for all objects within the environment.
 
 .Procedure
 . From the navigation panel, select {MenuAMUsers}. 
 . Click btn:[Create user].
-. Enter the details about your new user in the fields on the Create user page. Fields marked with an asterisk (*) are required.
-+
+. Enter the details about your new user in the fields on the *Create* user page. Fields marked with an asterisk (*) are required.
+. Normal users are the default when no User type is specified. To define a user as an administrator or auditor, select a *User type*.
 [NOTE]
 ====
 If you are modifying your own password, log out and log back in again for it to take effect.
 ====
 +
+. Select the *Organization* to be assigned for this user. For information about creating a new organization, refer to xref:proc-controller-create-organization[Creating an organization].
 . Click btn:[Create user].
 
-When the user is successfully created, the User dialog opens. From here, you can review and modify the user’s Teams, Roles, Tokens and other membership details.
+When the user is successfully created, the *User* dialog opens. From here, you can review and modify the user’s Teams, Roles, Tokens and other membership details.
 
 [NOTE]
 ====
